# Slider

./: CLAUDE.md  COMPREHENSIVE_BENCHMARK_RESULTS.md  Cargo.toml  DOCUMENTATION_REVIEW.md  EMPTY_CELL_PATH_ANALYSIS.md  FINAL_SOLVER_RESULTS.md  HASH_TABLE_FINDINGS.md  OPTIMIZATION_PLAN.md  PATTERN_ANALYSIS_SUMMARY.md  PATTERN_DESIGN.md  PATTERN_OPTIMIZATION_ANALYSIS.md  README.md  SESSION_NOTES.md  SOLVER_ANALYSIS.md  SOLVER_OPTIMIZATION_HISTORY.md  SOLVER_RESULTS.md
benches/: hash_pattern_benchmark.rs  large_puzzle_test.rs  pattern_benchmark.rs  relative_pattern_benchmark.rs
examples/: comprehensive_benchmark.rs  debug_walking_distance.rs  debug_wd_extraction.rs  empty_cell_benchmark.rs  solver_benchmark.rs  test_walking_distance.rs
src/: lib.rs  main.rs
src/controller/: game_controller.rs  mod.rs  shuffle_controller.rs
src/model/: empty_cell_path.rs  enhanced_heuristic.rs  entropy.rs  error.rs  ida_star_solver.rs  mod.rs  move_validator.rs  pattern_catalog.rs  pattern_hash.rs  performance.rs  puzzle_state.rs  relative_pattern.rs  solver.rs  solver_benchmark.rs  tile.rs  walking_distance.rs
src/presenter/: gui_presenter.rs  mod.rs  tile_renderer.rs
